--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -20,8 +20,8 @@
                 <!--<span class="badge myBadge" (click)="hideNotif()" style="font-size: 150%;margin-left: 8px;border-radius: 1rem 0rem 1rem 1rem;">Suivi</span>
                 <span *ngIf="newNotif > 0" (click)="hideNotif()" class="dot" style="position: absolute;text-align: center;border: 1px solid white ;box-shadow: 1px 2px 4px rgba(0, 0, 0, .5)">{{newNotif}}</span>-->
               </a>
-              <div class="dropdown" style="margin-left: 60rem">
-                <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <div class="dropdown">
+                <button style="float: right;margin-top: 1rem;margin-right: 1rem" class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   setting
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -194,7 +194,7 @@
                     <input id="file" class="input-file" type="file"  (change)="fileChange($event)" placeholder="Uploader Image" accept=".xlsx,.xls"> 
                     <button *ngIf="boutonFaye == 1" class="btn btn-success" style="float: right;margin-top: 1rem;margin-right: 1rem" (click)="fayelene()">Payer</button>
                     <div  id="tab" class="col-12">
-                        <table class="table table-striped table-dark" style="margin-top: 3rem;position: absolute;width: 100%;margin-left: 1rem;">
+                        <table class="table table-striped table-dark " style="margin-top: 3rem;position: absolute;width: 100%;margin-left: 1rem;">
                             <thead >
                             <tr>
                               <th scope="col">Prenom</th>
