--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -183,16 +183,16 @@
                      
                 </div>
                 <div class="tab-pane active" id="accueil">
-                    <!--<div id="om-options" style="margin-top: 1rem;position: absolute;margin-left: 29rem;background-color: white;">
-                        <a href="#tab" class="btn myBtnMenu " (click)="tabRecouvrement()" style="margin-left: 8px;border-radius: 1rem 0rem 1rem 1rem;color: black"  data-toggle="tab">Recouvrement</a>
-                        <a href="#tab" class="btn myBtnMenu " (click)="tabRendezVous()" style="margin-left: 8px;border-radius: 1rem 0rem 1rem 1rem;color: black"  data-toggle="tab">Rendez-vous</a>
-                        <a href="#tab" class="btn  myBtnMenu " (click)="tabFinaliser()" style="margin-left: 8px;border-radius: 1rem 0rem 1rem 1rem;color: black"  data-toggle="tab">Finalisés</a>
-                        <input type="text" style="width: 25%;border: 1px solid;margin-left: 3%;padding-left: 13px;" placeholder="Recherche ..." [(ngModel)]="filtre" name="filtre" id="">
-                    </div>-->
-                    <label for="file" class="label-file" style="font-size: 25px;margin-left: 3rem;position: absolute">Soumettre une liste</label>
-                    <label style="margin-left: 18rem;font-size: 20px;color: darkorange;">{{fileName}}</label>
-                    <input id="file" class="input-file" type="file"  (change)="fileChange($event)" placeholder="Uploader Image" accept=".xlsx,.xls"> 
-                    <button *ngIf="boutonFaye == 1" class="btn btn-success" style="float: right;margin-top: 1rem;margin-right: 1rem" (click)="fayelene()">Payer</button>
+                  <div class="row">
+                    <div class="col-10">
+                      <label for="file" class="label-file" style="font-size: 25px;margin-left: 3rem;position: absolute">Soumettre une liste</label>
+                      <label style="margin-left: 18rem;font-size: 20px;color: darkorange;position: absolute;">{{fileName}}</label>
+                      <input id="file" class="input-file" type="file"  (change)="fileChange($event)" placeholder="Uploader Image" accept=".xlsx,.xls">     
+                    </div>
+                    <div class="col-2">
+                      <button *ngIf="boutonFaye == 1" class="btn btn-success" style="margin-left: 8rem;position: absolute;margin-top: 5px;" (click)="fayelene()">Payer</button>
+                    </div>
+                  </div>
                     <div  id="tab" class="col-12">
                         <table class="table table-striped table-dark " style="margin-top: 3rem;position: absolute;width: 100%;margin-left: 1rem;">
                             <thead >
