--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -197,28 +197,35 @@
                         <table class="table table-striped table-dark " style="margin-top: 3rem;position: absolute;width: 100%;margin-left: 1rem;">
                             <thead >
                             <tr>
-                              <th scope="col">Prenom</th>
-                              <th scope="col">Nom</th>
-                              <th scope="col">Telephone</th>
-                              <th scope="col">Zone</th>
-                              <th scope="col">Salaire</th>
-                              <th scope="col">Jour d'absence</th>
-                              <th scope="col">Etat</th>
-
+                              <th scope="col">INTERIM</th>
+                              <th scope="col">LOCALITES </th>
+                              <th scope="col">USSD </th>
+                              <th scope="col">KIOSQUES</th>
+                              <th scope="col"> SALAIRE </th>
+                              <th scope="col"> PRIME UV </th>
+                              <th scope="col"> MANQUANT PAYE  </th>
+                              <th scope="col"> AVOIR </th>
+                              <th scope="col"> JOURS D'ABSENCE </th>
+                              <th scope="col"> SALAIRE PERCU</th>
+                              <th scope="col"> Etat </th>
                             </tr>
                           </thead>
                           <tbody>
                             <!--| filterBy: ['dateEnregistremet','client']: filtre-->
-                          <tr *ngFor="let l of listSalary ; let i=index">
-                              <td >{{l.prenom}}</td>
-                              <td >{{l.nom}}</td>
-                              <td >{{l.telephone}}</td>
-                              <td >{{l.zone}}</td>
-                              <td >{{l.salaire}}</td>
-                              <td >{{l.jAbsence}}</td>
+                          <tr *ngFor="let l of listSalarees ; let i=index">
+                              <td >{{getInfo1(l.infoSalaries,'INTERIM')}}</td>
+                              <td >{{getInfo1(l.infoSalaries,'LOCALITES')}}</td>
+                              <td >{{getInfo1(l.infoSalaries,'USSD')}}</td>
+                              <td >{{getInfo1(l.infoSalaries,'KIOSQUES')}}</td>
+                              <td >{{getInfo1(l.infoSalaries,'SALAIRE')}}</td>
+                              <td >{{getInfo1(l.infoSalaries,'PRIME_UV')}}</td>
+                              <td >{{getInfo1(l.infoSalaries,'MANQUANT_PAYE')}}</td>
+                              <td >{{getInfo1(l.infoSalaries,'AVOIR')}}</td>
+                              <td >{{getInfo1(l.infoSalaries,'JOURS_D_ABSENCE')}}</td>
+                              <td >{{getInfo1(l.infoSalaries,'SALAIRE_PERCU')}}</td>
                               <td *ngIf="l.etat == 1"><i class="fa fa-check-square-o" style="font-size:25px;color: green"></i></td>
-                              <td *ngIf="l.etat == 0"><i class="fa fa-spinner fa-spin" style="font-size:24px"></i></td>
-                              <td *ngIf="l.etat == 2">-</td>
+                              <td *ngIf="l.etat == -1"><i class="fa fa-spinner fa-spin" style="font-size:24px"></i></td>
+                              <td *ngIf="l.etat == 0">-</td>
                              
                             </tbody>
                         </table>
