--- a/src/app/connexion/connexion.component.html
+++ b/src/app/connexion/connexion.component.html
@@ -1,8 +1,7 @@
 <div style="background-image: url('../assets/backLogin.jpeg');opacity: 0.2;height: 1000px;width: 100%;position: absolute"></div>
 <div class="container col-md-12">
-  <div class="panel">
-    <div class="panel heading"></div>
-    <div class="panel body">
+  <div class="">
+    <div class="">
       <div class="row"  style="margin:10%;margin-top: 10rem">
         <div class="col-md-7 col-xs-12 col-sm-12 ">
             <div class="login-panel panel panel-default">
