--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -265,19 +265,19 @@
           Accueil</span>
       </a>
       <a class="nav-item nav-link active" style="border-radius: 1rem 0rem 1rem 1rem;" [routerLink]="['/accueil','historique']" data-toggle="tab">
-        <span class="badge myBadge" style="font-size: 150%;margin-left: 8px;border-radius: 1rem 0rem 1rem 1rem;"><i class="fa fa-home" style="font-size:24px"></i>
+        <span class="badge myBadge" style="font-size: 150%;margin-left: 8px;border-radius: 1rem 0rem 1rem 1rem;"><i class="fa fa-history" style="font-size:24px"></i>
           Historique</span>
       </a>
       <a class="nav-item nav-link active" [routerLink]="['/accueil','payment']" style="border-radius: 1rem 0rem 1rem 1rem;" href="#accueil" data-toggle="tab">
-        <span class="badge myBadge" style="font-size: 150%;margin-left: 8px;border-radius: 1rem 0rem 1rem 1rem;"><i class="fa fa-home" style="font-size:24px"></i>
-          New Payment</span>
+        <span class="badge myBadge" style="font-size: 150%;margin-left: 8px;border-radius: 1rem 0rem 1rem 1rem;"><i class="fa fa-money" style="font-size:24px"></i>
+          Paiement</span>
       </a>
       <a class="nav-item nav-link active" [routerLink]="['/accueil','addinfo']" style="border-radius: 1rem 0rem 1rem 1rem;" href="#accueil" data-toggle="tab">
-        <span class="badge myBadge" style="font-size: 150%;margin-left: 8px;border-radius: 1rem 0rem 1rem 1rem;"><i class="fa fa-home" style="font-size:24px"></i>
+        <span class="badge myBadge" style="font-size: 150%;margin-left: 8px;border-radius: 1rem 0rem 1rem 1rem;"><i class="fa fa-info-circle" style="font-size:24px"></i>
           Add Info</span>
       </a>
       <a class="nav-item nav-link active" [routerLink]="['/accueil','message']" style="border-radius: 1rem 0rem 1rem 1rem;" href="#accueil" data-toggle="tab">
-        <span class="badge myBadge" style="font-size: 150%;margin-left: 8px;border-radius: 1rem 0rem 1rem 1rem;"><i class="fa fa-home" style="font-size:24px"></i>
+        <span class="badge myBadge" style="font-size: 150%;margin-left: 8px;border-radius: 1rem 0rem 1rem 1rem;"><i class="fa fa-envelope" style="font-size:24px"></i>
           Messagerie</span>
       </a>
       <a class="nav-item nav-link" href="#suivi" data-toggle="tab" style="border-radius: 1rem 0rem 1rem 1rem;">
