--- a/src/app/connexion/connexion.component.html
+++ b/src/app/connexion/connexion.component.html
@@ -1,13 +1,13 @@
-<div style="background-image: url('../assets/backLogin.jpeg');opacity: 0.2;height: 1000px;width: 100%;position: absolute"></div>
-<div class="container col-md-12">
+<!-- <div style="background-image: url('../assets/backLogin.jpeg');opacity: 0.2;height: 1000px;width: 100%;position: absolute ; top : 0 "></div> -->
+<div class="container" >
   <div class="panel">
     <div class="panel heading"></div>
     <div class="panel body">
-      <div class="row"  style="margin:10%;margin-top: 10rem">
-        <div class="col-md-7 col-xs-12 col-sm-12 ">
-            <div class="login-panel panel panel-default">
+      <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12" style="padding: 16%">
+            <div class="login-panel panel panel-default" style="padding : 3%">
                 <div >
-                    <h2 >Authentifiez-vous SVP</h2>
+                    <h2 style="color: white ; text-align: center">Authentifiez-vous SVP</h2>
                 </div>
                 <div class="panel-body">
                     <form class="form-signin" (ngSubmit)="onConnect()"  #patientForm="ngForm">
