--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -1,21 +1,21 @@
-<div style="width:95%;margin-left:5em;margin-right: 5em;margin-top:2em">
+<div style="width:100%;margin-left:5em;margin-right: 5em;margin-top:2em">
   <div class="row">
     <div class="col-lg-8 col-md-8 col-xs-8 col-sm-8">
       <!--<label for="file" class="label-file" style="font-size: 25px;margin-left: 3rem">Soumettre une liste</label>-->
       <label for="file" class="label-file" style="font-size: 25px;margin-left: 3rem;position: absolute">Soumettre une liste</label>
-      <label style="margin-left: 19rem;font-size: 18px;color: black;margin-top: 8px;">{{fileName}}</label>
+      <label style="margin-left: 28rem;font-size: 18px;color: black;margin-top: 8px;">{{fileName}}</label>
       <input id="file" class="input-file" type="file"  (change)="fileChange($event)" placeholder="Uploader Image" accept=".xlsx,.xls">
    
      <!-- <input id="file" class="input-file" type="file"  (change)="fileChange($event)" placeholder="Uploader Image" accept=".xlsx,.xls"> 
       <label style="font-size: 20px;color: darkorange;">{{fileName}}</label>  -->  
     </div>
     <div class="col-lg-2 col-md-2 col-xs-2 col-sm-2">
-      <button *ngIf="listeExcel.length>0" class="btn btn-success" (click)="fayelene()">Payer</button>
+      <button *ngIf="listeExcel.length>0" class="btn btn-success" (click)="fayelene()">Payer Le Lot</button>
     </div>
   </div>
 </div>
-<div style="width:95%;margin-left:0.5em;margin-right:0.5em;margin-top:2em">
-    <table *ngIf="listeExcel.length>0" class="table table-codensed table-striped">
+<div style="width:100%;margin-left:0.5em;margin-right:0.5em;margin-top:2em ; padding: 1rem">
+    <table *ngIf="listeExcel.length>0" class="table table-codensed table-striped table-dark">
         <thead >
           <tr>
             <th scope="col">INTERIM</th>
@@ -26,6 +26,7 @@
             <th scope="col"> PRIME UV </th>
             <th scope="col"> MANQUANT PAYE  </th>
             <th scope="col"> AVOIR </th>
+            <th scope="col"> ABS LIS </th>
             <th scope="col"> JOURS D'ABSENCE </th>
             <th scope="col"> SALAIRE PERCU</th>
             <th scope="col"> ACTION </th>
@@ -42,6 +43,7 @@
               <td >{{l.PRIME_UV}}</td>
               <td >{{l.MANQUANT_PAYE}}</td>
               <td >{{l.AVOIR}}</td>
+              <td >{{l.ABS_LIS}}</td>
               <td >{{l.JOURS_D_ABSENCE}}</td>
               <td >{{l.SALAIRE_PERCU}}</td>
               <td *ngIf="l.etat == 1"><i class="fa fa-check-square-o" style="font-size:25px;color: green"></i></td>
