--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,4 +1,4 @@
-<div class="container border border-info" style="height: 40rem;margin-left: 10rem;padding: 0%;margin-top: 3rem;border-radius: 2rem 2rem 1rem 1rem;border: 1px black;">
+<div class="container border border-info" style="margin-top: 1rem;border-radius: 2rem 2rem 1rem 1rem;border: 1px black;">
 <div>
   <tabset>
     <tab heading="Ajouter contact" id="tab1">
