--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -110,7 +110,7 @@ myBtnMenu {
 }
 .backThemSombre {
     background-color: lightslategrey;
-    width: 100%;
+    min-width: 100%;
     height: 1000px;
     position: absolute;
     font-family: Montserrat,sans-serif;
@@ -123,3 +123,6 @@ myBtnMenu {
     position: absolute;
     font-family: Montserrat,sans-serif;
     padding: 0;margin: 0}
+a{
+    color: black;
+}
