--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="container col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding: 0;margin: 0">
+<div class="container-fluid" >
     <div class="row" >
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding: 0;margin: 0">
             <router-outlet></router-outlet>
