--- a/src/app/connexion/connexion.component.html
+++ b/src/app/connexion/connexion.component.html
@@ -1,4 +1,4 @@
-<div style="background-image: url('../assets/backLogin.jpeg');opacity: 0.2;height: 1000px;width: 100%;position: absolute"></div>
+<!--<div style="background-image: url('../assets/backLogin.jpeg');opacity: 0.2;height: 1000px;width: 100%;position: absolute"></div>
 <div class="container col-md-12">
   <div class="">
     <div class="">
@@ -32,4 +32,37 @@
             </div>
     </div>
   </div>
-</div>
+</div>-->
+<div class="myBody" style="height: 1000px;width: 100%;position: absolute"></div>
+<div class="container ">
+    <div class="d-flex justify-content-center h-100">
+      <div class="card" style="margin-top: 8rem ">
+        <div class="card-header">
+          <h2 style="text-align: center;color: white">Connexion</h2>     
+        </div>
+        <div class="card-body">
+          <form (ngSubmit)="onConnect()"  #patientForm="ngForm">
+            <div class="input-group form-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fa fa-user"></i></span>
+              </div>
+              <input type="text" class="form-control" placeholder="username"  name="login" required [(ngModel)]="login" #name="ngModel">
+              
+            </div>
+            <div class="input-group form-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fa fa-key"></i></span>
+              </div>
+              <input type="password" class="form-control" placeholder="password" name="password" required [(ngModel)]="password" #name="ngModel">
+            </div>
+            <div class="form-group">
+              <input  type="submit"  value="Login" class="btn float-right login_btn">
+            </div>
+          </form>
+        </div>
+        <div class="card-footer">
+        </div>
+        </div>
+      </div>
+  
+  </div>
