--- a/src/app/historique/historique.component.html
+++ b/src/app/historique/historique.component.html
@@ -1,43 +1,43 @@
 
-                <div  id="accueil">
-                    <div  id="tab" class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-                        <table class="table table-striped table-dark " >
-                            <thead >
-                            <tr>
-                              <th scope="col">INTERIM</th>
-                              <th scope="col">LOCALITES </th>
-                              <th scope="col">USSD </th>
-                              <th scope="col">KIOSQUES</th>
-                              <th scope="col"> SALAIRE </th>
-                              <th scope="col"> PRIME UV </th>
-                              <th scope="col"> MANQUANT PAYE  </th>
-                              <th scope="col"> AVOIR </th>
-                              <th scope="col"> JOURS D'ABSENCE </th>
-                              <th scope="col"> SALAIRE PERCU</th>
-                              <th scope="col"> Etat </th>
-                            </tr>
-                          </thead>
-                          <tbody>
-                          <tr *ngFor="let l of listSalarees ; let i=index">
-                              <td >{{getInfo1(l.infoSalaries,'INTERIM')}}</td>
-                              <td >{{getInfo1(l.infoSalaries,'LOCALITES')}}</td>
-                              <td >{{getInfo1(l.infoSalaries,'USSD')}}</td>
-                              <td >{{getInfo1(l.infoSalaries,'KIOSQUES')}}</td>
-                              <td >{{getInfo1(l.infoSalaries,'SALAIRE')}}</td>
-                              <td >{{getInfo1(l.infoSalaries,'PRIME_UV')}}</td>
-                              <td >{{getInfo1(l.infoSalaries,'MANQUANT_PAYE')}}</td>
-                              <td >{{getInfo1(l.infoSalaries,'AVOIR')}}</td>
-                              <td >{{getInfo1(l.infoSalaries,'JOURS_D_ABSENCE')}}</td>
-                              <td >{{getInfo1(l.infoSalaries,'SALAIRE_PERCU')}}</td>
-                              <td *ngIf="l.etat == 1"><i class="fa fa-check-square-o" style="font-size:25px;color: green"></i></td>
-                              <td *ngIf="l.etat == -1"><i class="fa fa-spinner fa-spin" style="font-size:24px"></i></td>
-                              <td *ngIf="l.etat == 0">-</td>
-                             
-                            </tbody>
-                        </table>
-                    </div>
-      
-                </div>
+      <div  id="accueil">
+          <div  id="tab" >
+              <table class="table table-striped table-responsive table-dark " >
+                  <thead >
+                  <tr>
+                    <th scope="col">INTERIM</th>
+                    <th scope="col">LOCALITES </th>
+                    <th scope="col">USSD </th>
+                    <th scope="col">KIOSQUES</th>
+                    <th scope="col"> SALAIRE </th>
+                    <th scope="col"> PRIME UV </th>
+                    <th scope="col"> MANQUANT PAYE  </th>
+                    <th scope="col"> AVOIR </th>
+                    <th scope="col"> JOURS D'ABSENCE </th>
+                    <th scope="col"> SALAIRE PERCU</th>
+                    <th scope="col"> Etat </th>
+                  </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let l of listSalarees ; let i=index">
+                    <td >{{getInfo1(l.infoSalaries,'INTERIM')}}</td>
+                    <td >{{getInfo1(l.infoSalaries,'LOCALITES')}}</td>
+                    <td >{{getInfo1(l.infoSalaries,'USSD')}}</td>
+                    <td >{{getInfo1(l.infoSalaries,'KIOSQUES')}}</td>
+                    <td >{{getInfo1(l.infoSalaries,'SALAIRE')}}</td>
+                    <td >{{getInfo1(l.infoSalaries,'PRIME_UV')}}</td>
+                    <td >{{getInfo1(l.infoSalaries,'MANQUANT_PAYE')}}</td>
+                    <td >{{getInfo1(l.infoSalaries,'AVOIR')}}</td>
+                    <td >{{getInfo1(l.infoSalaries,'JOURS_D_ABSENCE')}}</td>
+                    <td >{{getInfo1(l.infoSalaries,'SALAIRE_PERCU')}}</td>
+                    <td *ngIf="l.etat == 1"><i class="fa fa-check-square-o" style="font-size:25px;color: green"></i></td>
+                    <td *ngIf="l.etat == -1"><i class="fa fa-spinner fa-spin" style="font-size:24px"></i></td>
+                    <td *ngIf="l.etat == 0">-</td>
+                    
+                  </tbody>
+              </table>
+          </div>
+
+      </div>
            
         
        
