--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -10,7 +10,7 @@
          <a class="nav-link" style="color: white;cursor: pointer;" [routerLink]="['/accueil','historique']">Historique</a>
         </li>
         <li class="nav-item" >
-        <a class="nav-link" style="color: white;cursor: pointer;" [routerLink]="['/accueil','payment']">New payment</a>
+        <a class="nav-link hide" data-toggle="pill" style="color: white;cursor: pointer;" [routerLink]="['/accueil','payment']">New payment</a>
         </li>
         <li class="nav-item" >
           <a class="nav-link" style="color: white;cursor: pointer;" [routerLink]="['/accueil','addinfo']">Add info</a>
