--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -18,6 +18,9 @@
                  <li class="nav-item" >
                   <a class="nav-link" style="color: white;cursor: pointer;" [routerLink]="['/admin','validation']">Validation</a>
                  </li>
+                 <li class="nav-item" >
+                  <a class="nav-link" style="color: white;cursor: pointer;" [routerLink]="['/admin','audit']">Audit</a>
+                 </li>
                   <li class="nav-item dropdown" style="float: right;">
                   <a class="nav-link dropdown-toggle" style="color: white;cursor: pointer;" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Parametre
