--- a/src/app/validation/validation.component.html
+++ b/src/app/validation/validation.component.html
@@ -1,6 +1,18 @@
-<div class="row">
+<div class="row" >
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="margin-top: 1rem">
-    <button class="btn btn-info" (click)="validation()">Valider la liste</button>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="margin-top: 1rem">
+      <div class="row">
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 ">
+          <button class="btn btn-info" (click)="validation()">Valider la liste</button>
+        </div>
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 ">
+          <label  class="control-label">Filtre</label>
+        </div >
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 ">
+          <input type="text" class="form-control" [(ngModel)]="filtre" name="filtre" id="filtre">
+        </div>
+      </div>
+    </div>
   </div>
   <div  class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="margin-top: 1rem">
     <div  id="tab" >
@@ -22,7 +34,7 @@
         </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let l of listeSalaire ; let i=index">
+      <tr *ngFor="let l of listeSalaire | filterBy: ['interim','ussd','kiosque','salaire']: filtre ; let i=index">
         <td >{{l.interim}}</td>
         <td >{{l.ussd}}</td>
         <td >{{l.kiosque}}</td>
