--- a/src/app/historique/historique.component.html
+++ b/src/app/historique/historique.component.html
@@ -1,4 +1,43 @@
+<div class="row">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="margin-top: 1rem;">
+    <div class="row" >
+      <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 " style="border-radius: 1px solide black">
+        <div class="row">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 ">
+            <label  for="">Par date </label>
+            <div class="row">
+              <div class="col-lg-9 col-md-9 col-sm-9 col-xs-10 ">
+                  <input type="date" class="form-control" [(ngModel)]="date" name="date" id="idDate">
+              </div>
+              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 ">
+                <button class="btn btn-primary"><i class="fa fa-search"></i></button>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8 col-md-8 col-sm- col-xs-12 ">
+              <label  for="">Par intervalle </label>
+              <div class="row">
+                  <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 ">
+                    <input type="date" class="form-control" [(ngModel)]="dateDebut" name="dateDebut" id="iddateDebut">
+                  </div>
+                  <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 ">
+                    <input type="date" class="form-control" [(ngModel)]="dateFin" name="dateFin" id="iddateFin">
+                  </div>
+                  <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 ">
+                      <button class="btn btn-primary"><i class="fa fa-search"></i></button>
+                  </div>
 
+              </div>
+            </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 " style="box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);">
+        <label  for="">Recherhce ... </label>
+        <input type="text" class="form-control" [(ngModel)]="filtre" name="filtre" id="filtre">
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="margin-top:1rem">
       <div  id="accueil">
           <div  id="tab" >
               <table class="table table-striped table-responsive table-dark " >
@@ -18,7 +57,7 @@
                   </tr>
                 </thead>
                 <tbody>
-                <tr *ngFor="let l of listSalarees ; let i=index">
+                <tr *ngFor="let l of listSalarees | filterBy: ['infoSalaries']: filtre  ; let i=index">
                     <td >{{getInfo1(l.infoSalaries,'INTERIM')}}</td>
                     <td >{{getInfo1(l.infoSalaries,'LOCALITES')}}</td>
                     <td >{{getInfo1(l.infoSalaries,'USSD')}}</td>
@@ -38,6 +77,9 @@
           </div>
 
       </div>
+  </div>
+</div>
+      
            
         
        
