--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -4,38 +4,50 @@
     <tab heading="Ajouter contact" id="tab1">
       <div class="row" style="margin-top: 1rem">
         <div class="col-lg-8 col-md-8 col-xs-8 col-sm-8">
-          <label for="file" class="label-file" style="font-size: 25px;margin-left: 3rem;position: absolute">Soumettre une liste</label>
-          <label style="margin-left: 28rem;font-size: 18px;color: black;margin-top: 8px;">{{fileName}}</label>
+          <label for="file" class="label-file" style="font-size: 25px;margin-left: 1rem;position: absolute">Soumettre une liste</label>
+          <label style="margin-left: 16rem;font-size: 18px;color: black;margin-top: 8px;">{{fileName}}</label>
           <input id="file" class="input-file" type="file"  (change)="fileChange($event)" placeholder="Uploader Image" accept=".xlsx,.xls">
         </div>
-        <div class="col-lg-2 col-md-2 col-xs-2 col-sm-2">
-          <button *ngIf="listeExcel.length>0" class="btn btn-success" (click)="fayelene()">Payer</button>
-        </div>
     </div>
-    <div style="width:95%;margin-left:0.5em;margin-right:0.5em;margin-top:2em">
-        <table *ngIf="listeExcel.length>0" class="table table-codensed table-striped">
-            <thead >
-              <tr>
-                <th scope="col">PRENOM</th>
-                <th scope="col">NOM </th>
-                <th scope="col">TELEPHONE</th>
-                <th scope="col"> ACTION </th>
-              </tr>
-            </thead>
-            <tbody>
-                                     
-              <tr *ngFor="let l of listeExcel ; let i=index">
-                  <td >{{l.prenom}}</td>
-                  <td >{{l.nom}}</td>
-                  <td >{{l.telephone}}</td>
-                  <button (click)="payeOne(l,i)" class="btn btn-primary">Payer</button> 
-                </tbody>
-          </table>
+    <div  style="width:95%;margin-left:0.5em;margin-right:0.5em;margin-top:2em">
+      <div *ngIf="listeExcel.length>0">
+          <table  class="table table-codensed table-striped">
+              <thead >
+                <tr>
+                  <th scope="col">PRENOM</th>
+                  <th scope="col">NOM </th>
+                  <th scope="col">TELEPHONE</th>
+                  <th scope="col"> ACTION </th>
+                </tr>
+              </thead>
+              <tbody>
+                                       
+                <tr *ngFor="let l of listeExcel ; let i=index">
+                    <td >{{l.prenom}}</td>
+                    <td >{{l.nom}}</td>
+                    <td >{{l.telephone}}</td>
+                    <button (click)="supprimer(i)" class="btn btn-warning">Supprimer</button> 
+                  </tbody>
+            </table>
+            
+            <div class="control-group col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <label class="control-label" style="font-size: 1rem" >Group à envoyer</label>
+              <select class="form-control" [(ngModel)]="groupSelect" style="margin-top: 1rem" name="group" >
+                <option value="">Selection....</option>
+                <option *ngFor="let g of listeGroup" value="{{g.nom}}">{{g.nom}}</option>
+              </select>
+            </div>
+            <div *ngIf="groupSelect != ''" class="control-group" style="margin-top:1rem">
+              <button class="btn btn-danger" (click)="reinitialiser()">Annuler</button>
+              <button style="margin-left:1rem" class="btn btn-primary" (click)="addContact()">Valider</button>
+            </div>
+      </div>
+      
     </div>   
     </tab>
     <tab heading="Nouvelle campagne">
       <div class="row" style="margin-top: 1rem">
-        <div class="col-6">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <div class="control-group">
                   <label class="control-label" style="font-size: 1rem" >Group à envoyer</label>
                 <select class="form-control" [(ngModel)]="groupSelect" style="margin-top: 1rem" name="group" >
@@ -44,11 +56,30 @@
                 </select>
               </div>
         </div>
-        <div *ngIf="groupSelect != '' " class="col-6">
-            <div class="form-group">
-              <label for="comment">Message:</label>
-              <textarea class="form-control" rows="5" id="comment"></textarea>
-            </div>
+        <div *ngIf="groupSelect != '' " class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+          <div class="form-group">
+            <label for="comment">Message:</label>
+            <textarea class="form-control" [(ngModel)]="message" rows="5" id="comment"></textarea>
+          </div>
+          <div class="control-group" style="margin-top:1rem">
+            <button class="btn btn-danger" (click)="reinitialiser()">Annuler</button>
+            <button style="margin-left:1rem" class="btn btn-primary" (click)="sendSMS()">Valider</button>
+          </div>
+        </div>
+      </div>
+    </tab>
+    
+    <tab heading="Création de group">
+      <div class="row" style="margin-top: 1rem">
+        <div class="col-6">
+          <div class="control-group">
+            <label class="control-label" style="font-size: 1rem" >Nom du group </label>
+            <input class="form-control" [(ngModel)]="groupName" style="margin-top: 1rem" name="group" >
+          </div>
+          <div class="control-group" style="margin-top:1rem">
+            <button class="btn btn-danger" (click)="reinitialiser()">Annuler</button>
+            <button style="margin-left:1rem" class="btn btn-primary" (click)="addGroup()">Valider</button>
+          </div>
         </div>
       </div>
    
