--- a/src/app/connexion/connexion.component.css
+++ b/src/app/connexion/connexion.component.css
@@ -1,5 +1,5 @@
 .myBody{
-    background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
+    background: url('../../assets/pictureLogin.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
