--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -10,10 +10,10 @@
          <a class="nav-link" style="color: white;cursor: pointer;" [routerLink]="['/accueil','historique']">Historique</a>
         </li>
         <li class="nav-item" (click)="closeNav()">
-        <a class="nav-link hide" data-toggle="pill" style="color: white;cursor: pointer;" [routerLink]="['/accueil','payment']">New payment</a>
+        <a class="nav-link hide" data-toggle="pill" style="color: white;cursor: pointer;" [routerLink]="['/accueil','payment']">Nouveau Paiement</a>
         </li>
         <li class="nav-item"(click)="closeNav()" >
-          <a class="nav-link" style="color: white;cursor: pointer;" [routerLink]="['/accueil','addinfo']">Add info</a>
+          <a class="nav-link" style="color: white;cursor: pointer;" [routerLink]="['/accueil','addinfo']">Ajout Infos</a>
         </li>
         <li class="nav-item" (click)="closeNav()" >
           <a class="nav-link" style="color: white;cursor: pointer;" [routerLink]="['/accueil','message']">Messagerie</a>
