--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
-<div class="tab-content">
+<div class="tab-content" style="margin-top: 1rem;border-radius: 5px;border: 1px black; padding: 2rem ; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); background-color: white ; margin-left: 0.5rem; margin-right: 0.5rem; margin-bottom: 0.5rem">
     <div class="tab-pane active" id="accueil">
       <div class="container-fluid ">
       <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 " style="border: 1px dashed blue;">
             <div class="row" [ngClass]=' changeThem()'  style="margin-bottom: 2rem;margin-left: 0rem;margin-right: 0rem;background-color: white;margin-top: 1rem;padding: 0;   word-wrap: break-word;
             background-color: #fff;
             background-clip: border-box;
@@ -34,7 +34,7 @@
               </div>
             </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">  
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="border: 1px dashed blue;">  
           <button class="btn btn-primary" (click)="openModal(template)" style="float: right;margin-right: 1rem;margin-top: 1rem">Suivi</button>
             <div   id="chart" class="col-12" style=" margin-top: 6rem; " >
               <div  [ngClass]=' changeThem()' style="
