--- a/src/app/add-info/add-info.component.css
+++ b/src/app/add-info/add-info.component.css
@@ -1,10 +1,20 @@
 ul >li {
     display: inline-block;
     margin-right: 1.5em;
-    border-radius: 20px 0px 20px 20px;
-    border:2px solid black;
+    border: 2px solid #1E90FF;
     padding: 0.5em;
+    background-color: #1E90FF;
+    color: white;
+    padding: 0.5em;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
 }
+
+ul >li:hover{
+    background-color: white;
+    color: #1E90FF;
+}
+
+
 li >a{
     cursor: pointer;
 }
