--- a/src/app/add-info/add-info.component.html
+++ b/src/app/add-info/add-info.component.html
@@ -4,16 +4,18 @@
           <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
               <ul>
-                <li (click)="switch('new')"><a>enregistrement</a></li>
-                <li (click)="switch('liste')"><a>liste d'absence</a></li>
+                <li (click)="switch('new')"><a>Enregistrement</a></li>
+                <li (click)="switch('liste')"><a>Liste d'absence</a></li>
               </ul>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
-                <input [(ngModel)]="searchText" placeholder="prenom ou telephone" class="form-control" style="widows: 40%;" />
+                <input [(ngModel)]="searchText" placeholder="Filtre - Prenom ou Telephone" class="form-control" style="widows: 40%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); " />
             </div>
           </div>
           
-          <div *ngIf="liste">
+          <div *ngIf="liste"
+                  style="margin: 1rem;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 
+                    rgba(0, 0, 0, 0.19);">
             
             <table class="table table-striped table-condensed">
               <thead>
@@ -35,7 +37,8 @@
               </tbody>
             </table>
           </div>
-          <div *ngIf="new">
+          <div *ngIf="new" style="margin: 1rem; 
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
                 <table class="table table-condensed table-striped">
                   <thead>
                     <tr>
