--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,16 +1,15 @@
 <div class="container-fluid"  style="padding: 0;margin: 0;margin-left: 0rem;">
   <div [ngClass]='changeBackThem()'></div>
   <div class="row">
-        <div class="panel panel-body">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: 	#1E90FF !important">
-            <a class="navbar-brand" style="color: white"><i class="fa fa-home" style="font-size:24px"></i> Accueil - admin</a>
+          <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color:   #1E90FF !important ; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); width: 100%">
+            <a class="navbar-brand" style="color: white"><i class="fa fa-home" style="font-size:24px"></i> Accueil-Admin</a>
             <button class="navbar-toggler" id="myDiv" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"  (click)="closeNav()" style="color: white"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item" (click)="closeNav()" >
-                  <a class="nav-link" style="color: white;cursor: pointer;" [routerLink]="['/admin','dashboad']">Dashboad</a>
+                  <a class="nav-link" style="color: white;cursor: pointer;" [routerLink]="['/admin','dashboad']">Dashboard</a>
                  </li>
                  <li class="nav-item" (click)="closeNav()" >
                   <a class="nav-link" style="color: white;cursor: pointer;" [routerLink]="['/admin','gestionuser']">Gestion utilisateur</a>
@@ -21,23 +20,23 @@
                  <li class="nav-item" (click)="closeNav()" >
                   <a class="nav-link" style="color: white;cursor: pointer;" [routerLink]="['/admin','audit']">Audit</a>
                  </li>
-                  <li class="nav-item dropdown" style="float: right;">
-                  <a class="nav-link dropdown-toggle" style="color: white;cursor: pointer;" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Parametre
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" (click)="sombre();closeNav()"  style="cursor: pointer;">Sombre</a>
-                    <a class="dropdown-item" (click)="claire();closeNav()" style="cursor: pointer;">Claire</a>
-               </div>
-                </li>
+<!--                   <li class="nav-item dropdown" style="float: right;">
+                    <a class="nav-link dropdown-toggle" style="color: white;cursor: pointer;" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Parametre
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <a class="dropdown-item" (click)="sombre();closeNav()"  style="cursor: pointer;">Sombre</a>
+                      <a class="dropdown-item" (click)="claire();closeNav()" style="cursor: pointer;">Claire</a>
+                    </div>
+                  </li> -->
                 <li class="nav-item">
                   <a class="nav-link btn btn-danger" (click)="deconnexion()" style="color: white;cursor: pointer;">Déconnexion</a>
                 </li>
               </ul>
             </div>
           </nav>
-
-            <div class="tab-content">
+<!-- 
+            <div class="tab-content" style="margin-top: 1rem;border-radius: 5px;border: 1px black; padding: 2rem ; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); background-color: white">
                 <div class="tab-pane active" id="accueil">
 
                   <div class="row">
@@ -88,8 +87,10 @@
 
                 </div>
             </div>
-        </div>
-        
+
+ -->                    
+</div>
+
         <ng-template #template >
             <div class="modal-header">
               <h4 class="modal-title pull-left">Suivi des agents</h4>
@@ -139,7 +140,7 @@
              </div>
           </div>
         </ng-template>
-</div>
+
 
 <ng-template #template4>
   <div class="modal-header">
