--- a/src/app/audit/audit.component.html
+++ b/src/app/audit/audit.component.html
@@ -1,4 +1,4 @@
-<div class="row" >
+<div class="row" style="margin-top: 1rem;border-radius: 5px;border: 1px black; padding: 2rem ; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); background-color: white ;  margin-left: 0.5rem; margin-right: 0.5rem; margin-bottom: 0.5rem">
     <div  class="col-lg-4 col-md-4 col-sm-4 col-xs-12 " style="margin-top: 1rem;">
     <div class="card card-stats myClass" (click)="auditInsertion();openModal1(template1)" style="background-color: #A52A2A;cursor: pointer;">
       <div class="card-body ">
