--- a/src/app/gestion-compte/gestion-compte.component.html
+++ b/src/app/gestion-compte/gestion-compte.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="margin-top: 1rem;border-radius: 5px;border: 1px black; padding: 2rem ; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); background-color: white ;  margin-left: 0.5rem; margin-right: 0.5rem; margin-bottom: 0.5rem" >
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="margin-top: 1rem">
       <div class="row">
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 ">
@@ -23,19 +23,16 @@
                 <th scope="col">Login</th>
                 <th scope="col">Option </th>
                 <th scope="col">Option</th>
-                <th scope="col">Etat </th>
               </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let l of users | filterBy: ['prenom','nom','login']: filtre ; let i=index;">
+            <tr *ngFor=" let l of users | filterBy: ['prenom','nom','login']: filtre ; let i=index; ">
                 <td >{{i+1}}</td>
                 <td >{{l.prenom}}</td>
                 <td >{{l.nom}}</td>
                 <td >{{l.login}}</td>
                 <td ><button class="btn btn-warning" (click)="openModal1(template1);getIndex(i)" type="submit"><i class="fa fa-pencil"></i> Modifier</button></td>
                 <td ><button class="btn btn-danger" (click)="deleteUser(i)" type="submit"><i class="fa fa-remove"></i> Supprimer</button></td>
-                <td *ngIf="l.etat == 1" ><button class="btn btn-warning" type="submit">Connecté</button></td>
-                <td *ngIf="l.etat == 0"><button class="btn btn-warning" type="submit">Déconnecté</button></td>
                 
               </tbody>
           </table>
@@ -43,6 +40,7 @@
     
     </div>
 </div>
+
 <ng-template #template >
   <div class="modal-header " style="background-color: dodgerblue;color:white">
     <h4 class="modal-title pull-left">Création d'utilisateur</h4>
@@ -107,7 +105,7 @@
         </div>
         <div class="control-group" style="margin-top:1rem">
           <button (click)="closeUpdateModal()" class="btn btn-danger">Annuler</button>
-          <button style="margin-left:1rem" (click)="updateUser()" class="btn btn-success">Valider</button>
+          <button style="margin-left:1rem" (click)="soppiUser()" class="btn btn-success">Valider</button>
         </div>
         
       </form>
